빈 카드로 채우기 && 레벨에 따라 맵 사이즈 변환1

--- a/src/Components/Deck/styles.scss
+++ b/src/Components/Deck/styles.scss
@@ -77,6 +77,11 @@
         background: #02b3e4;
         cursor: default;
       }
+      &.disabled {
+        background: transparent;
+        border: none;
+        box-shadow: none;
+      }
     }
   }
 }
