--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,11 @@
+@font-face {
+  font-family: "HangeulNuri-Bold";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_three@1.0/HangeulNuri-Bold.woff")
+    format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
 html {
   box-sizing: border-box;
 }
@@ -15,10 +23,9 @@ body {
   margin: 0;
   padding: 0;
 }
-
 body {
   background: #ffffff; /* Background pattern from Subtle Patterns */
-  font-family: "Nanum Gothic", "Open Sans", sans-serif;
+  font-family: "HangeulNuri-Bold", "Nanum Gothic", "Open Sans", sans-serif;
 }
 
 main {
@@ -27,4 +34,27 @@ main {
   align-items: center;
   flex-direction: column;
   padding: 1rem;
+}
+
+header {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  padding: 10px 0;
+
+  h1 {
+    font-size: 28px;
+  }
+}
+
+.score-panel {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: #14222d;
+  color: white;
+  border-radius: 10px;
+  padding: 12px;
+  margin-bottom: 3px;
 }
