--- a/src/styles.scss
+++ b/src/styles.scss
@@ -48,7 +48,7 @@ header {
 }
 
 .score-panel {
-  width: 100%;
+  width: 90vw;
   display: flex;
   justify-content: space-between;
   align-items: center;
