--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,6 @@
+@import "include-media/dist/_include-media.scss";
+@import "./media.scss";
+
 @font-face {
   font-family: "HangeulNuri-Bold";
   src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_three@1.0/HangeulNuri-Bold.woff")
@@ -34,6 +37,12 @@ main {
   align-items: center;
   flex-direction: column;
   padding: 1rem;
+
+  @include media(">tablet") {
+    width: 691px;
+    height: 691px;
+    margin: 0 auto;
+  }
 }
 
 header {
@@ -48,6 +57,7 @@ header {
 }
 
 .score-panel {
+  max-width: 659px;
   width: 90vw;
   display: flex;
   justify-content: space-between;
@@ -57,4 +67,8 @@ header {
   border-radius: 10px;
   padding: 12px;
   margin-bottom: 3px;
+
+  @include media(">tablet") {
+    width: 100%;
+  }
 }
