--- a/src/styles.scss
+++ b/src/styles.scss
@@ -36,7 +36,7 @@ main {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  padding: 1rem;
+  padding: 0 1rem 1rem 1rem;
 
   @include media(">tablet") {
     width: 691px;
