카드 체크됐을 때 스타일 추가

--- a/src/Components/Deck/styles.scss
+++ b/src/Components/Deck/styles.scss
@@ -118,10 +118,15 @@
           @include card-font-size(7);
         }
       }
+      &.checked {
+        background: #0569ff;
+      }
       &.open {
         transform: rotateY(0);
-        background: #02b3e4;
         cursor: default;
+      }
+      &.open:not(.checked) {
+        background: #02b3e4;
       }
       &.disabled {
         background: transparent;
