[fix] path 영역때문에 클릭 잘못되는 것 수정

--- a/src/Components/Deck/styles.scss
+++ b/src/Components/Deck/styles.scss
@@ -124,6 +124,9 @@
       &.open {
         transform: rotateY(0);
         cursor: default;
+        path {
+          display: initial;
+        }
       }
       &.open:not(.checked) {
         background: #02b3e4;
