--- a/src/Components/Deck/styles.scss
+++ b/src/Components/Deck/styles.scss
@@ -1,5 +1,6 @@
-@import "include-media/dist/_include-media.scss";
-@import "../../media.scss";
+@import "include-media/dist/_include-media";
+@import "../../_media";
+@import "../../Styles/_basic";
 
 @mixin card-size($size, $show: false) {
   @if $size >= 6 {
@@ -50,7 +51,7 @@
 }
 
 .deck {
-  background: linear-gradient(160deg, #02ccba 0%, #aa7ecd 100%);
+  background: $gradient;
   border-radius: 10px;
   box-shadow: 12px 15px 20px 0 rgba(46, 61, 73, 0.5);
   width: 90vw;
@@ -71,9 +72,9 @@
     width: 100%;
     height: 100%;
     .card {
-      background: #2e3d49;
+      background: $gray;
       font-size: 0;
-      color: #ffffff;
+      color: $white;
       border-radius: 8px;
       border: 10px solid transparent;
       cursor: pointer;
@@ -129,7 +130,7 @@
         }
       }
       &.open:not(.checked) {
-        background: #02b3e4;
+        background: $sky;
       }
       &.disabled {
         background: transparent;
