--- a/src/Pages/SignUp/styles.scss
+++ b/src/Pages/SignUp/styles.scss
@@ -3,7 +3,7 @@
 .auth-container {
   height: 100%;
 
-  .sign-in-form {
+  .sign-up-form {
     border: 1px solid $gray;
     border-radius: 10px;
     padding: 10px 15px;
