--- a/src/Components/LinkButton/styles.scss
+++ b/src/Components/LinkButton/styles.scss
@@ -1,5 +1,13 @@
 @import "../../Styles/basic";
 
-.link-sign {
+.link-btn {
   @include button;
+
+  &.in {
+    border-radius: 5px 0 0 5px;
+    margin-right: 2px;
+  }
+  &.up {
+    border-radius: 0 5px 5px 0;
+  }
 }
